<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amechy.accesoadatostema1.EjerciciosTema1"
    android:orientation="vertical">
    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEjercicio1"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEjercicio2"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEjercicio3"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnEjercicio4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEjercicio4"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="8dp"/>



</LinearLayout>
