<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amechy.accesoadatostema1.ContadorDeCafe"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txvCafes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/txvCafe" />

        <TextView
            android:id="@+id/txvNCafes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txvNCafes" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="180dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="85dp"

            android:text="@string/btnMenos"
            android:layout_weight="0.12" />

        <TextView
            android:id="@+id/txvTemporizador"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/txvTemporizador"
            android:textSize="30dp"
            android:layout_marginEnd="85dp"/>

        <Button
            android:id="@+id/btnMas"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:text="+" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnComenzar"
        android:text="@string/bntComenzar"
        android:layout_gravity="center"/>

</LinearLayout>
